# hybrid-demand-forecasting

./: .gitignore  ARCHITECTURE_HYBRID.md  CHANGELOG.md  DOCKER_UV_SETUP.md  Dockerfile  Dockerfile.mlflow  MODEL_PIPELINE_EXPLANATION.md  Makefile  QUICKSTART_HYBRID.md  README.md  README_HYBRID_FORECASTING.md  TROUBLESHOOTING.md  deploy_flows.py  deploy_weekly_retrain.py  docker-compose.yml  env.example  inference_demo.py  main.py  prefect.yaml  pyproject.toml  requirements.txt  test.ipynb  test_data.ipynb
api/: __init__.py  main.py
docs/: MODEL_CONTROL_ARCHITECTURE.md
flows/: __init__.py  daily_forecast.py  data_ingestion.py  weekly_retrain_hybrid.py
grafana/: datasources.yml
grafana/dashboards/: dashboard_provisioning.yml
models/production/: config.json
scripts/: backfill_from_csv.py  init_db.py  test_csv_pipeline.py  test_system.py
scripts/migrations/: 20251120_add_weather_columns.sql
src/: __init__.py
src/db/: __init__.py  connection.py  init-databases.sql  schema.sql
src/models/: __init__.py  inference_pipeline.py  seq2seq_lstm.py  train_pipeline.py
src/utils/: __init__.py  config.py  data_splitter.py  grafana_client.py  metrics.py  mlflow_tracking.py
